documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32NET.VB

    Public Declare Sub P12_Readwds Lib "P13W32.DLL" Alias "_P12_Readwds@16" (ByVal offval As Int32, ByVal destptr As IntPtr, ByVal cntval As Int32, ByVal handleval As UInt32)
    Public Declare Function P12_Transmit Lib "P13W32.DLL" Alias "_P12_Transmit@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P12_Writebcdwd Lib "P13W32.DLL" Alias "_P12_Writebcdwd@16" (ByVal countval As Int32, ByVal startval As Int32, ByVal srcptr As IntPtr, ByVal handleval As UInt32)
    Public Declare Sub P12_Writertdwd Lib "P13W32.DLL" Alias "_P12_Writertdwd@24" (ByVal trval As Int32, ByVal saval As Int32, ByVal countval As Int32, ByVal startval As Int32, ByVal srcptr As IntPtr, ByVal handleval As UInt32)
    Public Declare Sub P12_Writewd Lib "P13W32.DLL" Alias "_P12_Writewd@12" (ByVal value As Int32, ByVal offset As Int32, ByVal handleval As UInt32)
    Public Declare Sub P12_Writewds Lib "P13W32.DLL" Alias "_P12_Writewds@16" (ByVal offval As Int32, ByVal srcptr As IntPtr, ByVal cntval As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_AddrDSP Lib "P13W32.DLL" Alias "_P13_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function P13_AddrHost Lib "P13W32.DLL" Alias "_P13_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function P13_BCConfigEx Lib "P13W32.DLL" Alias "_P13_BCConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCConfigMsg Lib "P13W32.DLL" Alias "_P13_BCConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_BCSchedAgain Lib "P13W32.DLL" Alias "_P13_BCSchedAgain@8" (ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedBranch Lib "P13W32.DLL" Alias "_P13_BCSchedBranch@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedBranchDin0 Lib "P13W32.DLL" Alias "_P13_BCSchedBranchDin0@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedBranchDin1 Lib "P13W32.DLL" Alias "_P13_BCSchedBranchDin1@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedBranchEx Lib "P13W32.DLL" Alias "_P13_BCSchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedBuild Lib "P13W32.DLL" Alias "_P13_BCSchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedCall Lib "P13W32.DLL" Alias "_P13_BCSchedCall@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedCallCond Lib "P13W32.DLL" Alias "_P13_BCSchedCallCond@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedCallCondEx Lib "P13W32.DLL" Alias "_P13_BCSchedCallCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedEntry Lib "P13W32.DLL" Alias "_P13_BCSchedEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedFrameEnd Lib "P13W32.DLL" Alias "_P13_BCSchedFrameEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedFrameStart Lib "P13W32.DLL" Alias "_P13_BCSchedFrameStart@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedGap Lib "P13W32.DLL" Alias "_P13_BCSchedGap@8" (ByVal gapval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedGoto Lib "P13W32.DLL" Alias "_P13_BCSchedGoto@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedHalt Lib "P13W32.DLL" Alias "_P13_BCSchedHalt@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedInt Lib "P13W32.DLL" Alias "_P13_BCSchedInt@8" (ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedIntCond Lib "P13W32.DLL" Alias "_P13_BCSchedIntCond@12" (ByVal condition As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedIntCondEx Lib "P13W32.DLL" Alias "_P13_BCSchedIntCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedNop Lib "P13W32.DLL" Alias "_P13_BCSchedNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedPause Lib "P13W32.DLL" Alias "_P13_BCSchedPause@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedPulse Lib "P13W32.DLL" Alias "_P13_BCSchedPulse@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedPulse0 Lib "P13W32.DLL" Alias "_P13_BCSchedPulse0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedPulse1 Lib "P13W32.DLL" Alias "_P13_BCSchedPulse1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedRestart Lib "P13W32.DLL" Alias "_P13_BCSchedRestart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedRetryEx Lib "P13W32.DLL" Alias "_P13_BCSchedRetryEx@24" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedReturn Lib "P13W32.DLL" Alias "_P13_BCSchedReturn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedUser Lib "P13W32.DLL" Alias "_P13_BCSchedUser@8" (ByVal useraddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSetEntry Lib "P13W32.DLL" Alias "_P13_BCSetEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSetTimeout Lib "P13W32.DLL" Alias "_P13_BCSetTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkAddr Lib "P13W32.DLL" Alias "_P13_BlkAddr@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_BlkOptRd Lib "P13W32.DLL" Alias "_P13_BlkOptRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_BlkOptWr Lib "P13W32.DLL" Alias "_P13_BlkOptWr@12" (ByVal rtopt As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkPtrRd Lib "P13W32.DLL" Alias "_P13_BlkPtrRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub P13_BlkPtrWr Lib "P13W32.DLL" Alias "_P13_BlkPtrWr@12" (ByVal descaddr As UInt32, ByVal taval As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_BlkRd Lib "P13W32.DLL" Alias "_P13_BlkRd@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkReset Lib "P13W32.DLL" Alias "_P13_BlkReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkSWDRd Lib "P13W32.DLL" Alias "_P13_BlkSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_BlkSWDWr Lib "P13W32.DLL" Alias "_P13_BlkSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkWipe Lib "P13W32.DLL" Alias "_P13_BlkWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BlkWr Lib "P13W32.DLL" Alias "_P13_BlkWr@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardBoot Lib "P13W32.DLL" Alias "_P13_CardBoot@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardCloseAll Lib "P13W32.DLL" Alias "_P13_CardCloseAll@0" () As Int32
    Public Declare Function P13_CardConfig Lib "P13W32.DLL" Alias "_P13_CardConfig@16" (ByVal enableflag As Int32, ByVal command As UInt16, ByVal taval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardGetInfo Lib "P13W32.DLL" Alias "_P13_CardGetInfo@8" (ByVal infotype As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_CardGetInfoEx Lib "P13W32.DLL" Alias "_P13_CardGetInfoEx@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CardInit Lib "P13W32.DLL" Alias "_P13_CardInit@0" ()
    Public Declare Function P13_CardIsRunning Lib "P13W32.DLL" Alias "_P13_CardIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardNop Lib "P13W32.DLL" Alias "_P13_CardNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardOpenEx Lib "P13W32.DLL" Alias "_P13_CardOpenEx@20" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16) As UInt32
    Public Declare Function P13_CardOpenExx Lib "P13W32.DLL" Alias "_P13_CardOpenExx@28" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Sub P13_CardResetEx Lib "P13W32.DLL" Alias "_P13_CardResetEx@4" (ByVal handleval As UInt32)
    Public Declare Function P13_CardResume Lib "P13W32.DLL" Alias "_P13_CardResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardTest Lib "P13W32.DLL" Alias "_P13_CardTest@8" (ByVal level As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardTest0 Lib "P13W32.DLL" Alias "_P13_CardTest0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardTest1 Lib "P13W32.DLL" Alias "_P13_CardTest1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardTest2 Lib "P13W32.DLL" Alias "_P13_CardTest2@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardTest3 Lib "P13W32.DLL" Alias "_P13_CardTest3@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CardTrigger Lib "P13W32.DLL" Alias "_P13_CardTrigger@4" (ByVal handleval As UInt32)
    Public Declare Function P13_CmdAddr Lib "P13W32.DLL" Alias "_P13_CmdAddr@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_CmdAlloc Lib "P13W32.DLL" Alias "_P13_CmdAlloc@8" (ByVal count As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_CmdBaseRd Lib "P13W32.DLL" Alias "_P13_CmdBaseRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub P13_CmdBaseWr Lib "P13W32.DLL" Alias "_P13_CmdBaseWr@8" (ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_CmdClear Lib "P13W32.DLL" Alias "_P13_CmdClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CmdCountRd Lib "P13W32.DLL" Alias "_P13_CmdCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_CmdCountWr Lib "P13W32.DLL" Alias "_P13_CmdCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_CmdCtrlRd Lib "P13W32.DLL" Alias "_P13_CmdCtrlRd@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_CmdCtrlWr Lib "P13W32.DLL" Alias "_P13_CmdCtrlWr@12" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_CmdCurrRd Lib "P13W32.DLL" Alias "_P13_CmdCurrRd@4" (ByVal handleval As UInt32) As UInt16
